packages/jsii/test/negatives/neg.property-name.2.ts
///!MATCH_ERROR: Member names cannot use an underscore: my_Prop

export class MyClass {
    my_Prop?: number;
}
